--- a/Grid-css/index.html
+++ b/Grid-css/index.html
@@ -55,7 +55,7 @@
     </nav>
 </nav>
     <div class="container">
-        <h1 class="text-center">CSS Grid Sprint BootCamp</h1>
+        <h1 class="text-center">CSS Grid Sprints BootCamp</h1>
         <hr>
         <div class="gallery">
             <div class="view overlay hm-black-light gallery-item">
